# sympla

./: .isort.cfg  .pre-commit-config.yaml  Makefile  Pipfile  README.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml
examples/: affiliates.py  checkin_by_ticket_id.py  checkin_by_ticket_number.py  event.py  events.py  order_by_identifier.py  orders_by_event.py  participant_by_ticket_id.py  participant_by_ticket_number.py  participants_by_event.py  participants_by_order.py
pysympla/: __init__.py  sympla.py
sympla/: __init__.py  sympla.py
tests/: test_pysympla.py  test_sympla.py  tests.py
