[tool.poetry]
name = "pysympla"
version = "0.1.1"
description = "A plataforma online de eventos líder no Brasil. Venda de ingressos, promoção e administração de eventos. Simples e segura. Organiza eventos? Sympla!"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hudsonbrendon/pysympla"
homepage = "https://github.com/hudsonbrendon/pysympla#readme"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
requests-mock = "^1.10.0"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
