[tool.poetry]
name = "sympla"
version = "0.1.4"
description = "A plataforma online de eventos líder no Brasil. Venda de ingressos, promoção e administração de eventos. Simples e segura. Organiza eventos? Sympla!"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hudsonbrendon/sympla"
homepage = "https://github.com/hudsonbrendon/sympla#readme"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
requests-mock = "^1.12.1"
pytest-sugar = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
requests-mock = "^1.10.0"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["pytest", "requests"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"